# claude-manager

./: .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
.claude/: settings.local.json
.claude/commands/: implement-task.md  merge-prep.md  plan-task.md  review-branch.md
apps/api/: package.json  tsconfig.json
apps/api/src/: index.ts  server.ts
apps/api/src/integrations/: routes.test.ts  routes.ts  store.ts  tester.test.ts  tester.ts
apps/api/src/repos/: routes.test.ts  routes.ts  store.ts
apps/api/src/settings/: config.ts  routes.test.ts  routes.ts
apps/api/src/tasks/: provider.ts  routes.test.ts  routes.ts  store.ts
apps/desktop/: package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/api/: client.ts  index.ts  repos.ts  settings.ts  tasks.ts  types.ts
apps/desktop/src/components/: ErrorBanner.tsx  LanguageSelect.tsx  Select.tsx  Sidebar.tsx  ThemeToggle.tsx  index.ts
apps/desktop/src/contexts/: getContextError.ts  index.ts
apps/desktop/src/hooks/: useHealthCheck.ts
apps/desktop/src/i18n/: index.ts
apps/desktop/src/pages/: AgentTask.tsx  Repositories.tsx  Settings.tsx  index.ts
docs/: AI_AGENT_PROTOCOL.md  ARCHITECTURE.md  CODING_STANDARDS.md  GIT_WORKFLOW.md  PR_REVIEW_CHECKLIST.md  TASK_SPEC_TEMPLATE.md
(+12 files in other folders)
