[package]
name = "claude-manager"
version = "0.0.1"
description = "Claude Manager Desktop"
authors = []
edition = "2021"

[lib]
name = "claude_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "claude-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
